<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Question7Activity">


    <ImageView
        android:layout_marginLeft="20dp"
        android:layout_width="310dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/question_7" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7."
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/question_seven"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <RadioButton
                android:id="@+id/question_seven_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_a" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_b" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven_c" />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:onClick="back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="back"/>
        <Button
            android:onClick="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="next"/>
    </RelativeLayout>
</LinearLayout>