<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".Question1Activity">

    <ImageView
        android:layout_width="288dp"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/question_one" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1."
            android:fontFamily="casual"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="casual"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/question_one"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp">

            <RadioButton
                android:id="@+id/question_one_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_a" />

            <RadioButton
                android:id="@+id/question_one_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_b" />

            <RadioButton
                android:id="@+id/question_one_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_c" />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <Button
            android:id="@+id/next"
            android:onClick="next"
            android:background="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="next"/>
    </RelativeLayout>
</LinearLayout>